# tatca-ai-horoscope

./: .env.example  .gitignore  ARCHITECTURE.md  SETUP.md  bot_service.py  docker-compose.yaml  laso_dep.html  main.py  pyproject.toml  rag_service.py  requirements.txt  telegram_handler.py  tuvi_cli.py  vni_rag_pipeline.py
.github/workflows/: build-test-main.yml
app/: main.py
app/api/routes/: health.py  ingest.py
app/bot/: base.py
app/bot/telegram/: client.py  handlers.py  router.py
app/config/: settings.py
app/core/: exceptions.py  interfaces.py
app/domain/: birth_data_collector.py  models.py  pipeline.py  prompts.py
app/horoscope_engine/: AmDuong.py  App.py  DiaBan.py  Sao.py  ThienBan.py  __init__.py
app/infrastructure/: database.py  dependencies.py  setup.py
app/services/: chart_renderer.py  document_loader.py  embedding.py  html_chart_renderer.py  llm.py  lunar_calendar.py  lunar_engine.py  ocr.py  real_tuvi_engine.py  tuvi_calculator.py  tuvi_engine.py  vector_store.py
app/templates/: tuvi_template.html
tests/: conftest.py  test_document_loader.py  test_domain_models.py  test_exceptions.py  test_handlers.py  test_lunar_tuvi.py  test_pipeline.py  test_tuvi_engine.py
tests/integration/: test_api.py
tests/unit/: test_document_loader.py  test_pipeline.py  test_vector_store.py
